cambie el id por el username en las los parametros de las cotizaciones
