# docs/swagger.yaml
@@ -84,7 +84,7 @@ paths:
       parameters:
       - description: Usuario que cotizara
         in: query
-        name: id-usuario
+        name: username
         required: true
         type: string
       - description: Simbolo de la moneda que cotizara
@@ -156,7 +156,7 @@ paths:
         type: string
       - description: Usuario que hace los cambios
         in: query
-        name: id-usuario
+        name: username
         required: true
         type: string
       - description: Cotizacion Actualizada
@@ -443,7 +443,7 @@ paths:
         "200":
           description: OK
           schema:
-            type: string
+            $ref: '#/definitions/domain.Usuario'
         "400":
           description: Bad Request
           schema:
